--- a/style.css
+++ b/style.css
@@ -8,13 +8,23 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal: "inter";
 }
 
 body{
     background-color:var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .principal{
     background-image: url(Background.png);
+}
+
+.container{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
